refactor: Event 다건 조회 명세를 단건 조회 명세와 동일하게 수정
#803